<resources>
    <string name="app_name">FoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">No Internet</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="calories">Calories</string>
    <string name="percentage_formatt">(%1$s%%)</string>
    <string name="see_details">See details</string>
    <string name="ingredients">Ingredients</string>
    <string name="percentage_format">(%1$s%%)</string>

</resources>