<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="dtlViewModel"
            type="com.example.foodapp.model.Detail" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.detail.DetailFragment">




        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            app:loadImage="@{String.valueOf(dtlViewModel.image)}"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{dtlViewModel.title}"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/img_detail"
            tools:text="Title"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/pg_carb"
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="130dp"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/circle_progress"
            app:layout_constraintEnd_toStartOf="@+id/pg_fat"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_detail" />

        <ProgressBar
            android:id="@+id/pg_fat"
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="130dp"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/circular_progress_fat"
            app:layout_constraintEnd_toStartOf="@+id/pg_protien"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pg_carb"
            app:layout_constraintTop_toBottomOf="@+id/title_detail" />

        <ProgressBar
            android:id="@+id/pg_protien"
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="130dp"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/circular_progress_protien"
            app:layout_constraintEnd_toStartOf="@+id/pg_cal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pg_fat"
            app:layout_constraintTop_toBottomOf="@+id/title_detail" />

        <ProgressBar
            android:id="@+id/pg_cal"
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="130dp"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/circular_progress_cal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pg_protien"
            app:layout_constraintTop_toBottomOf="@+id/title_detail" />

        <TextView
            android:id="@+id/txt_carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/carbs"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/pg_carb"
            app:layout_constraintEnd_toEndOf="@+id/pg_carb"
            app:layout_constraintStart_toStartOf="@+id/pg_carb" />

        <TextView
            android:id="@+id/txt_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/fat"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/pg_fat"
            app:layout_constraintEnd_toEndOf="@+id/pg_fat"
            app:layout_constraintStart_toStartOf="@+id/pg_fat" />

        <TextView
            android:id="@+id/txt_protien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/protein"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/pg_protien"
            app:layout_constraintEnd_toEndOf="@+id/pg_protien"
            app:layout_constraintStart_toStartOf="@+id/pg_protien" />

        <TextView
            android:id="@+id/txt_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/calories"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/pg_cal"
            app:layout_constraintEnd_toEndOf="@+id/pg_cal"
            app:layout_constraintStart_toStartOf="@+id/pg_cal" />

        <TextView
            android:id="@+id/carb_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/pg_carb"
            app:layout_constraintTop_toBottomOf="@+id/pg_carb"
            tools:text="30.1" />

        <TextView
            android:id="@+id/carb_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/carb_amount"
            app:layout_constraintTop_toBottomOf="@+id/pg_carb"
            tools:text="g" />

        <TextView
            android:id="@+id/carb_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textColor="#1B6F04"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/pg_carb"
            app:layout_constraintStart_toEndOf="@+id/carb_unit"
            app:layout_constraintTop_toBottomOf="@+id/pg_carb"
            tools:text="(56%)" />

        <TextView
            android:id="@+id/fat_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/pg_fat"
            app:layout_constraintTop_toBottomOf="@+id/pg_fat"
            tools:text="16" />

        <TextView
            android:id="@+id/fat_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/fat_amount"
            app:layout_constraintTop_toBottomOf="@+id/pg_fat"
            tools:text="g" />

        <TextView
            android:id="@+id/fat_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textColor="#CC0505"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/pg_fat"
            app:layout_constraintStart_toEndOf="@+id/fat_amount"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/pg_fat"
            tools:text="(72%)" />

        <TextView
            android:id="@+id/pro_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/pg_protien"
            app:layout_constraintTop_toBottomOf="@+id/pg_protien"
            tools:text="12" />

        <TextView
            android:id="@+id/pro_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/pro_amount"
            app:layout_constraintTop_toBottomOf="@+id/pg_protien"
            tools:text="g" />

        <TextView
            android:id="@+id/pro_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textColor="#D8C301"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/pg_protien"
            app:layout_constraintStart_toEndOf="@+id/pro_amount"
            app:layout_constraintTop_toBottomOf="@+id/pg_protien"
            app:layout_constraintHorizontal_bias="0.0"
            tools:text="(8%)" />

        <TextView
            android:id="@+id/cal_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/pg_cal"
            app:layout_constraintTop_toBottomOf="@+id/pg_cal"
            tools:text="320" />

        <TextView
            android:id="@+id/cal_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/pg_cal"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toEndOf="@+id/cal_amount"
            app:layout_constraintTop_toBottomOf="@+id/pg_cal"
            tools:text="kkal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <TextView
            android:id="@+id/Seedetail_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/see_details"
            android:textSize="20sp"
            android:textColor="#1B6F04"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/title_detail" />

        <TextView
            android:id="@+id/txt_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ingredients"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/carb_unit"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/see_details_ing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/see_details"
            android:textColor="#1B6F04"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/cal_unit" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleview_indi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_ingredients"
            tools:listitem="@layout/custom_indigredents" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:isIndicator="false"
            android:numStars="5"
            tools:rating="2"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/gl2"
            app:layout_constraintTop_toBottomOf="@+id/img_detail"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>